--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,21 +1,19 @@
 .header {
-    display: flex;
     justify-content: space-between;
     align-items: center;
+    display: flex;
     height: 48px;
     max-width: 1076px;
     margin: 0 auto;
     padding: 0 15px;
-    background-color: #fff;
-    border-bottom: 1px black;
 }
 
-.header_left{
+.sectionLeft{
     display: flex;
     align-items: center;
 }
 
-.header_right {
+.sectionRight {
     display: flex;
     align-items: center;
 }
@@ -23,29 +21,28 @@
 .logo {
     width: 136px;
     height: 24px;
-    padding-right: 30px;
+    margin-right: 30px;
 }
 
 .search {
-    display: flex;
     align-items: center;
+    display: flex;
     width: 230px;
     height: 32px;
-    background-color: #edeef0;
     border-radius: 7px;
+    background-color: #edeef0;
 }
 
-.search_icon {
+.searchIcon {
     width: 14px;
     height: 14px;
     margin: 0 10px;
 }
 
-.search_text {
+.searchText {
+    color: #818c99;
     font-size: 14px;
     font-weight: 400;
-    font-family: Arial, serif;
-    color: #818c99;
 }
 
 .avatar {
@@ -55,7 +52,7 @@
     object-fit: cover;
 }
 
-.chevron_down {
+.chevron {
     width: 8px;
     height: 4px;
     margin: 0 8px 0 6px;
