--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,7 +1,26 @@
+@import "src/variables";
+
 .navbar {
   flex-direction: column;
   display: flex;
   width: 154px;
+
+  @media (max-width: $mobile) {
+    position: fixed;
+    bottom: 0;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 45px;
+    background-color: white;
+  }
+}
+
+.label {
+  @media (max-width: $mobile) {
+    display: none;
+  }
 }
 
 .item {
@@ -17,10 +36,21 @@
   &:hover {
     background-color: #e5e7eb;
   }
+
+  @media (max-width: $mobile) {
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    border-radius: 0;
+  }
 }
 
 .itemIcon {
   width: 20px;
   height: 20px;
   margin-right: 10px;
+  @media (max-width: $mobile) {
+    margin: 0;
+  }
 }
