--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,10 +1,20 @@
+@import "src/variables";
+
 .main {
     display: flex;
     padding: 15px 0;
     margin-top: 48px;
+
+    @media screen and (max-width: $mobile) {
+        padding: 0;
+    }
 }
 
 .content {
     width: 100%;
-    margin-left: 10px;
+    margin: 0 10px;
+
+    @media screen and (max-width: $mobile) {
+        margin: 0;
+    }
 }
