--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,6 +6,7 @@
   top: 0;
   width: 100%;
   background-color: white;
+  box-shadow: 0 -2px 6px 2px rgba(0, 0, 0, 0.06);
 }
 
 .header {
@@ -18,6 +19,7 @@
 .sectionLeft {
   align-items: center;
   display: flex;
+  padding-left: 6px;
 }
 
 .sectionRight {
@@ -38,7 +40,7 @@
   height: 32px;
   border-radius: 7px;
   background-color: #edeef0;
-  @media (max-width: $mobile) {
+  @media screen and (max-width: $mobile) {
     display: none;
   }
 }
@@ -60,7 +62,7 @@
   height: 32px;
   border-radius: 7px;
   background-color: #edeef0;
-  @media (max-width: $mobile) {
+  @media screen and (max-width: $mobile) {
     display: flex;
   }
 }
