--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   min-width: 154px;
 
-  @media (max-width: $mobile) {
+  @media screen and (max-width: $mobile) {
     position: fixed;
     bottom: 0;
     flex-direction: row;
@@ -18,7 +18,7 @@
 }
 
 .label {
-  @media (max-width: $mobile) {
+  @media screen and (max-width: $mobile) {
     display: none;
   }
 }
@@ -27,7 +27,7 @@
   align-items: center;
   display: flex;
   height: 30px;
-  padding: 0 6px;
+  padding-left: 6px;
   text-decoration: none;
   font-size: 13px;
   color: black;
@@ -37,7 +37,7 @@
     background-color: #e5e7eb;
   }
 
-  @media (max-width: $mobile) {
+  @media screen and (max-width: $mobile) {
     justify-content: center;
     height: 100%;
     width: 100%;
@@ -50,7 +50,7 @@
   width: 20px;
   height: 20px;
   margin-right: 10px;
-  @media (max-width: $mobile) {
+  @media screen and (max-width: $mobile) {
     margin: 0;
   }
 }
