--- a/src/pages/Profile/ProfileInfo/ProfileInfo.module.scss
+++ b/src/pages/Profile/ProfileInfo/ProfileInfo.module.scss
@@ -1,11 +1,23 @@
+@import "src/variables";
+
 .profileInfo {
   justify-content: space-between;
   display: flex;
   height: 150px;
-  width: 100%;
   padding: 20px;
   border-radius: 10px;
   background-color: white;
+
+  @media screen and (max-width: $tablet) {
+    flex-direction: column;
+    align-items: center;
+    height: 260px;
+    border-radius: 10px;
+  }
+
+  @media screen and (max-width: $mobile) {
+    border-radius: 0 0 10px 10px;
+  }
 }
 
 .avatar {
@@ -13,6 +25,11 @@
   height: 150px;
   border-radius: 50%;
   object-fit: cover;
+
+  @media screen and (max-width: $tablet) {
+    width: 100px;
+    min-height: 100px;
+  }
 }
 
 .wrapper {
@@ -21,6 +38,20 @@
   display: flex;
   width: 100%;
   margin-left: 16px;
+
+  @media screen and (max-width: $tablet) {
+    flex-direction: column;
+  }
+}
+
+.information {
+  flex-direction: column;
+  display: flex;
+
+  @media screen and (max-width: $tablet) {
+    align-items: center;
+    padding-bottom: 10px;
+  }
 }
 
 .name {
