--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,3 +1,8 @@
 $mobile: 576px;
 $tablet: 992px;
 $desktop: 1200px;
+
+$gray: #626D7A;
+$light-gray: #edeef0;
+$blue: #346297;
+$light-blue: #E5EBF1;
