--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -30,7 +30,7 @@
 .logo {
   width: 136px;
   height: 24px;
-  margin-right: 30px;
+  margin-right: 22px;
 }
 
 .search {
@@ -39,7 +39,7 @@
   width: 230px;
   height: 32px;
   border-radius: 7px;
-  background-color: #edeef0;
+  background-color: $light-gray;
   @media screen and (max-width: $mobile) {
     display: none;
   }
@@ -61,7 +61,7 @@
   display: none;
   height: 32px;
   border-radius: 7px;
-  background-color: #edeef0;
+  background-color: $light-gray;
   @media screen and (max-width: $mobile) {
     display: flex;
   }
@@ -71,10 +71,11 @@
   align-items: center;
   display: flex;
   height: 48px;
-  margin-left: 10px;
+  padding-left: 10px;
 
   &:hover {
     background-color: #f5f6f8;
+
   }
 }
 
