--- a/src/components/SidebarContainer/Sidebar/MainSidebarContent/PhoneNumberSidebar/PhoneNumberSidebar.module.scss
+++ b/src/components/SidebarContainer/Sidebar/MainSidebarContent/PhoneNumberSidebar/PhoneNumberSidebar.module.scss
@@ -4,18 +4,25 @@
   gap: 10px;
   height: 60px;
   padding: 0 15px;
+  font-weight: 700;
   font-size: 15px;
   border-bottom: 1px solid #f2f2f2;
   cursor: pointer;
 }
 
 .chevron {
-  transform: rotate(90deg);
+  margin-left: auto;
+  transform: rotate(-90deg);
 }
 
-.labelItem {
-  background-color: #F2F2F2;
+.phoneNumber {
+  margin-bottom: 3px;
   font-weight: 700;
-  text-decoration: none;
-  color: black;
+  font-size: 14px;
+}
+
+.phoneText {
+  font-weight: 400;
+  font-size: 12px;
+  color: #999999;
 }
