--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,7 +2,7 @@ $mobile: 576px;
 $tablet: 992px;
 $desktop: 1200px;
 
-$gray: #626D7A;
+$gray: #626d7a;
 $light-gray: #edeef0;
 $blue: #346297;
-$light-blue: #E5EBF1;
+$light-blue: #e5ebf1;
