--- a/src/components/SidebarContainer/Sidebar/SecondarySidebarContent/SecondarySidebarTitle/SecondarySidebarTitle.module.scss
+++ b/src/components/SidebarContainer/Sidebar/SecondarySidebarContent/SecondarySidebarTitle/SecondarySidebarTitle.module.scss
@@ -1,14 +1,14 @@
 .title {
-  align-items: center;
-  display: flex;
-  gap: 10px;
-  height: 60px;
-  padding: 0 15px;
-  font-weight: 700;
-  font-size: 15px;
-  text-decoration: none;
-  color: black;
-  background-color: #F2F2F2;
-  border-bottom: 1px solid #f2f2f2;
-  cursor: pointer;
+    align-items: center;
+    display: flex;
+    gap: 10px;
+    height: 60px;
+    padding: 0 15px;
+    font-weight: 700;
+    font-size: 15px;
+    text-decoration: none;
+    color: black;
+    background-color: #f2f2f2;
+    border-bottom: 1px solid #f2f2f2;
+    cursor: pointer;
 }
