--- a/src/variables.scss
+++ b/src/variables.scss
@@ -4,5 +4,7 @@ $desktop: 1200px;
 
 $gray: #626d7a;
 $light-gray: #edeef0;
+$pearl-light-gray: #9c9c9c;
+$smoky-white: #f5f5f5;
 $blue: #346297;
 $light-blue: #e5ebf1;
