--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,4 +1,4 @@
-@import '../../variables';
+@import 'src/variables';
 
 .footerContainer {
     background-color: #333333;
@@ -46,7 +46,7 @@
 
 .text {
     font-size: 12px;
-    color: #999;
+    color: $pearl-light-gray;
 
     @media screen and (max-width: $tablet) {
         text-align: center;
@@ -103,7 +103,7 @@
     font-size: 10px;
     letter-spacing: 0.08rem;
     text-decoration: none;
-    color: #999;
+    color: $pearl-light-gray;
 
     &:hover {
         color: white;
