--- a/src/components/SidebarContainer/Sidebar/MainSidebarContent/MainSidebarItem/MainSidebarItem.module.scss
+++ b/src/components/SidebarContainer/Sidebar/MainSidebarContent/MainSidebarItem/MainSidebarItem.module.scss
@@ -1,3 +1,5 @@
+@import 'src/variables';
+
 .item {
     align-items: center;
     display: flex;
@@ -6,7 +8,7 @@
     padding: 0 15px;
     font-weight: 700;
     font-size: 15px;
-    border-bottom: 1px solid #f2f2f2;
+    border-bottom: 1px solid $smoky-white;
     cursor: pointer;
 }
 
