--- a/src/components/SidebarContainer/Sidebar/MainSidebarContent/PhoneNumberSidebar/PhoneNumberSidebar.module.scss
+++ b/src/components/SidebarContainer/Sidebar/MainSidebarContent/PhoneNumberSidebar/PhoneNumberSidebar.module.scss
@@ -1,3 +1,5 @@
+@import 'src/variables';
+
 .item {
     align-items: center;
     display: flex;
@@ -18,5 +20,5 @@
 .phoneText {
     font-weight: 400;
     font-size: 12px;
-    color: #999999;
+    color: $pearl-light-gray;
 }
