--- a/src/components/SidebarContainer/Sidebar/SecondarySidebarContent/SecondarySidebarItem/SecondarySidebarItem.module.scss
+++ b/src/components/SidebarContainer/Sidebar/SecondarySidebarContent/SecondarySidebarItem/SecondarySidebarItem.module.scss
@@ -1,3 +1,5 @@
+@import 'src/variables';
+
 .item {
     align-items: center;
     display: flex;
@@ -5,6 +7,6 @@
     height: 60px;
     padding: 0 15px;
     font-size: 15px;
-    border-bottom: 1px solid #f2f2f2;
+    border-bottom: 1px solid $smoky-white;
     cursor: pointer;
 }
