--- a/src/components/SidebarContainer/Sidebar/SecondarySidebarContent/SecondarySidebarTitle/SecondarySidebarTitle.module.scss
+++ b/src/components/SidebarContainer/Sidebar/SecondarySidebarContent/SecondarySidebarTitle/SecondarySidebarTitle.module.scss
@@ -1,3 +1,5 @@
+@import 'src/variables';
+
 .title {
     align-items: center;
     display: flex;
@@ -8,7 +10,7 @@
     font-size: 15px;
     text-decoration: none;
     color: black;
-    background-color: #f2f2f2;
-    border-bottom: 1px solid #f2f2f2;
+    background-color: $smoky-white;
+    border-bottom: 1px solid $smoky-white;
     cursor: pointer;
 }
