--- a/src/components/pages/MainContainer/Banner/Banner.module.scss
+++ b/src/components/pages/MainContainer/Banner/Banner.module.scss
@@ -9,7 +9,7 @@
     height: 400px;
     background-size: cover;
     background-position: center;
-    background-image: url('../../../assets/image/banner.jpg');
+    background-image: url('../../../../assets/image/banner.jpg');
 
     @media screen and (max-width: $tablet) {
         height: 350px;
