--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,7 @@
 @import 'src/variables';
 
 .headerContainer {
+    flex: 0 0 auto;
     position: fixed;
     z-index: 2;
     top: 0;
@@ -19,6 +20,7 @@
     align-items: center;
     display: flex;
     height: 62px;
+    padding: 0 15px;
 }
 
 .sectionLeft {
@@ -26,14 +28,12 @@
     grid-column-gap: 15px;
     grid-template-columns: 1fr auto;
     display: grid;
-    padding: 6px;
 }
 
 .actions {
     align-items: center;
     display: flex;
     gap: 15px;
-    padding-right: 6px;
 }
 
 .menuButton {
@@ -41,6 +41,7 @@
     background-color: transparent;
     border: none;
     cursor: pointer;
+    padding: 0;
 }
 
 .menuIcon {
