--- a/src/components/pages/CatalogContainer/Catalog.module.scss
+++ b/src/components/pages/CatalogContainer/Catalog.module.scss
@@ -1,9 +1,50 @@
+@import 'src/variables';
+
 .catalog {
-    margin-top: 62px;
-    padding: 15px;
+    flex: 1 0 auto;
+    width: 100%;
+}
+
+.titleBlock {
+    align-items: center;
+    display: flex;
+    gap: 15px;
+    margin-bottom: 15px;
 }
 
 .title {
     font-weight: 700;
     font-size: 30px;
+}
+
+.totalCount {
+    padding: 2px 6px;
+    font-size: 14px;
+    color: $pearl-light-gray;
+    border: 1px solid $light-gray;
+    border-radius: 3px;
+}
+
+.filtersButton {
+    align-items: center;
+    display: flex;
+    height: 20px;
+    margin-bottom: 5px;
+    font-weight: 700;
+    font-size: 12px;
+    font-family: 'Montserrat', sans-serif;
+    background-color: inherit;
+    border: none;
+    cursor: pointer;
+}
+
+.chevron {
+    width: 10px;
+    margin-left: 5px;
+}
+
+.notFound {
+    //margin-top: 20px;
+    text-align: center;
+    width: 100%;
 }
