--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,7 +3,7 @@ $tablet: 992px;
 $desktop: 1200px;
 
 $gray: #626d7a;
-$light-gray: #edeef0;
+$light-gray: #d5d6d8;
 $pearl-light-gray: #9c9c9c;
 $smoky-white: #f5f5f5;
 $blue: #346297;
