--- a/src/components/pages/CatalogContainer/Filters/FiltersSidebarContainer/FiltersSidebar/PriceSliderSidebar/PriceSliderSidebar.module.scss
+++ b/src/components/pages/CatalogContainer/Filters/FiltersSidebarContainer/FiltersSidebar/PriceSliderSidebar/PriceSliderSidebar.module.scss
@@ -59,7 +59,7 @@
 
 .track {
     height: 4px;
-    background: $light-gray;
+    background-color: $light-gray;
 
     &:nth-of-type(2) {
         background-color: $gray;
