--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-.root {
+#root {
     display: flex;
     flex-direction: column;
     height: 100%;
