--- a/src/components/pages/ProfileContainer/Profile/AdministrationContainer/Administration/Filters/FiltersForm/FiltersFrom.module.scss
+++ b/src/components/pages/ProfileContainer/Profile/AdministrationContainer/Administration/Filters/FiltersForm/FiltersFrom.module.scss
@@ -1,5 +1,9 @@
 @import 'src/variables';
 
+.form {
+    width: 100%;
+}
+
 .name {
     font-size: 18px;
     margin-bottom: 10px;
@@ -23,4 +27,8 @@
     margin-bottom: 5px;
     font-family: 'Montserrat', sans-serif;
     box-sizing: border-box;
+}
+
+.button {
+    width: 100%;
 }
